After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761745 - GLib-GObject-CRITICAL **: g_object_get_qdata: assertion 'G_IS_OBJECT (object)' failed when starting application mode
GLib-GObject-CRITICAL **: g_object_get_qdata: assertion 'G_IS_OBJECT (object)...
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Web Applications
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-09 03:45 UTC by Michael Catanzaro
Modified: 2016-09-17 20:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: Fix criticals when starting in app mode (2.22 KB, patch)
2016-09-17 20:34 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2016-02-09 03:45:42 UTC
I see these criticals starting Ephy in application mode:

(epiphany-duolingo-55f0d44bf9217fa2c4eaf7c958f50dcd257d4e05:29908): GLib-GObject-CRITICAL **: g_object_get_qdata: assertion 'G_IS_OBJECT (object)' failed

(epiphany-duolingo-55f0d44bf9217fa2c4eaf7c958f50dcd257d4e05:29908): GLib-GObject-CRITICAL **: g_object_set_qdata: assertion 'G_IS_OBJECT (object)' failed

(epiphany-duolingo-55f0d44bf9217fa2c4eaf7c958f50dcd257d4e05:29908): Gtk-CRITICAL **: gtk_action_set_sensitive: assertion 'GTK_IS_ACTION (action)' failed

(epiphany-duolingo-55f0d44bf9217fa2c4eaf7c958f50dcd257d4e05:29908): Gtk-CRITICAL **: gtk_action_set_visible: assertion 'GTK_IS_ACTION (action)' failed

The first one is coming from here, in ephy_window_constructor:

/* We don't need to show the page menu in web application mode. */
action = gtk_action_group_get_action (toolbar_action_group, "PageMenu");
ephy_action_change_sensitivity_flags (action, SENS_FLAG_CHROME, TRUE);

There, gtk_action_group_get_action() returns NULL (not sure why) and ephy_action_change_sensitivity_flags is not prepared for that.
Comment 1 Michael Catanzaro 2016-09-17 20:34:56 UTC
The following fix has been pushed:
2c79655 window: Fix criticals when starting in app mode
Comment 2 Michael Catanzaro 2016-09-17 20:34:59 UTC
Created attachment 335776 [details] [review]
window: Fix criticals when starting in app mode

Need to be careful to get the actions from the right action group here.

Also, use a typechecking cast to catch errors like this earlier.