window: Fix criticals when starting in app mode

Need to be careful to get the actions from the right action group here.

Also, use a typechecking cast to catch errors like this earlier.

https://bugzilla.gnome.org/show_bug.cgi?id=761745