src/ephy-window.c
@@ -3043,12 +3043,14 @@ ephy_window_constructed (GObject *object)
     gtk_widget_set_visible (ephy_header_bar_get_page_menu_button (EPHY_HEADER_BAR (window->header_bar)), FALSE);
     gtk_widget_set_visible (ephy_header_bar_get_new_tab_button (EPHY_HEADER_BAR (window->header_bar)), FALSE);
 
+    action_group = gtk_widget_get_action_group (GTK_WIDGET (window), "popup");
     new_action = g_action_map_lookup_action (G_ACTION_MAP (action_group), "context-bookmark-page");
     ephy_action_change_sensitivity_flags (G_SIMPLE_ACTION (new_action), SENS_FLAG_CHROME, TRUE);
 
+    action_group = gtk_widget_get_action_group (GTK_WIDGET (window), "win");
     for (i = 0; i < G_N_ELEMENTS (disabled_actions_for_app_mode); i++) {
       new_action = g_action_map_lookup_action (G_ACTION_MAP (action_group),
-                                           disabled_actions_for_app_mode[i]);
+                                               disabled_actions_for_app_mode[i]);
       ephy_action_change_sensitivity_flags (G_SIMPLE_ACTION (new_action),
                                             SENS_FLAG_CHROME, TRUE);
     }
